--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="theD">
         <button id="next" onclick="newQuote();">New Quote</button>
         <a id="twitter" target="_blank" href="" data-size="large">
-            <i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
     </div>
 </body>
 
